--- a/public/volunteer-manager.html
+++ b/public/volunteer-manager.html
@@ -1,14 +1,158 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="myModule" ng-controller="myController" ng-init="Fetchall()">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Volunteer Manager</title>
-    <meta name="google-adsense-account" content="ca-pub-7210368865406744">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <meta name="google-adsense-account" content="ca-pub-7210368865406744" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.8.3/angular.min.js"></script>
+
+    <style>
+        /* Body & font */
+        body {
+            background: #f9fafc;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            color: #333;
+            padding-bottom: 40px;
+        }
+
+        /* Header bar */
+        .header-bar {
+            background: linear-gradient(90deg, #343a40, #212529);
+            padding: 15px 0;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.25);
+            color: #f8f9fa;
+            text-align: center;
+            font-weight: 600;
+            font-size: 1.25rem;
+            letter-spacing: 0.05em;
+            text-transform: uppercase;
+            user-select: none;
+        }
+
+        /* Page title */
+        .page-title {
+            margin-top: 50px;
+            font-weight: 700;
+            font-size: 2.5rem;
+            color: #212529;
+            text-align: center;
+            letter-spacing: 0.02em;
+            margin-bottom: 30px;
+        }
+
+        /* Table container */
+        .table-container {
+            max-width: 900px;
+            margin: 0 auto;
+            background: #fff;
+            padding: 25px;
+            border-radius: 12px;
+            box-shadow: 0 10px 30px rgb(0 0 0 / 0.1);
+            transition: box-shadow 0.3s ease;
+        }
+
+        .table-container:hover {
+            box-shadow: 0 15px 40px rgb(0 0 0 / 0.15);
+        }
+
+        /* Table styling */
+        table {
+            width: 100%;
+            border-collapse: separate;
+            border-spacing: 0 15px;
+        }
+
+        thead tr {
+            background-color: #343a40;
+            color: #fff;
+            font-weight: 600;
+            border-radius: 12px;
+            box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
+        }
+
+        thead th {
+            padding: 15px;
+            text-align: left;
+            border: none;
+        }
+
+        tbody tr {
+            background-color: #fafafa;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
+            transition: background-color 0.25s ease;
+            border-radius: 10px;
+        }
+
+        tbody tr:hover {
+            background-color: #e6f0ff;
+        }
+
+        tbody td {
+            padding: 15px;
+            vertical-align: middle;
+            border: none;
+            font-weight: 500;
+            color: #495057;
+        }
+
+        /* Sr.No column */
+        tbody td:first-child {
+            font-weight: 700;
+            color: #6c757d;
+        }
+
+        /* Responsive */
+        @media (max-width: 576px) {
+            .page-title {
+                font-size: 1.8rem;
+                margin-top: 30px;
+            }
+
+            .table-container {
+                padding: 15px;
+                margin: 15px;
+                box-shadow: none;
+            }
+
+            thead tr {
+                display: none;
+            }
+
+            tbody tr {
+                display: block;
+                margin-bottom: 15px;
+                background: #fff;
+                box-shadow: 0 4px 10px rgb(0 0 0 / 0.1);
+                border-radius: 10px;
+                padding: 15px;
+            }
+
+            tbody td {
+                display: flex;
+                justify-content: space-between;
+                padding: 8px 0;
+                border: none;
+                font-size: 0.9rem;
+                color: #444;
+                font-weight: 500;
+            }
+
+            tbody td::before {
+                content: attr(data-label);
+                font-weight: 600;
+                color: #6c757d;
+                flex-basis: 40%;
+                text-align: left;
+            }
+        }
+    </style>
+
     <script>
         let module = angular.module("myModule", []);
         let controller = module.controller("myController", function ($scope, $http) {
@@ -29,17 +173,15 @@
     </script>
 </head>
 
-<body ng-app="myModule" ng-controller="myController" ng-init="Fetchall()">
-    <div class="p-3 mb-4 bg-dark">
-        <h5 class="text-center text-white">www.panhadlers.com</h5>
+<body>
+    <div class="header-bar">
+        www.panhadlers.com
     </div>
 
-    <div class="container">
-        <div class="text-center mb-4">
-            <h1>Volunteers Record</h1>
-        </div>
+    <h1 class="page-title">Volunteers Record</h1>
 
-        <table class="table table-bordered table-striped">
+    <div class="table-container">
+        <table class="table">
             <thead>
                 <tr>
                     <th>Sr.No.</th>
@@ -50,10 +192,10 @@
             </thead>
             <tbody>
                 <tr ng-repeat="obj in JsonAry">
-                    <td>{{$index + 1}}</td>
-                    <td>{{obj.email}}</td>
-                    <td>{{obj.usertype}}</td>
-                    <td>{{obj.status}}</td>
+                    <td data-label="Sr.No.">{{$index + 1}}</td>
+                    <td data-label="Email ID">{{obj.email}}</td>
+                    <td data-label="User Type">{{obj.usertype}}</td>
+                    <td data-label="Status">{{obj.status}}</td>
                 </tr>
             </tbody>
         </table>
