--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Panhandlers - Beautiful Animated</title>
+  <title>Panhandlers - Index Page</title>
   <meta name="google-adsense-account" content="ca-pub-7210368865406744" />
   <link
     rel="icon"
